--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -15,13 +15,13 @@
     <!-- 商品頁分類導覽 -->
     @@include('layout/header.html')
     <section class="productHead">
-        <div class="productBread">
+        <div class="productBread size marginAuto">
             <p>
                 <span>logo</span>
                 <span>>雕塑類</span>
             </p>
         </div>
-        <div class="adjustBox">
+        <div class="adjustBox size marginAuto">
             <nav class="sideNav">
                 <div class="sideNavTitle">
                     <a href="">
@@ -166,16 +166,16 @@
     <!-- 商品頁商品區塊 -->
     <div id="app2">
         <section class="productiMainProduct productMainSection">
-            <div class="titleBox">
+            <div class="titleBox size marginAuto">
                 <h4>124件商品</h4>
                 <div class="buttonBox">
                     <button id="selectorButton">篩選器</button>
                 </div>
             </div>
-            <section class="productSelector displayNone" id="productSelector">
+            <section class="productSelector displayNone size marginAuto" id="productSelector">
                 aaa
             </section>
-            <div class="productSection">
+            <div class="productSection size marginAuto">
                 <article class="prouductItem commomItem aidBgColor" v-for="product in products">
                     <div class="img">
                         <img :src="product.img">
@@ -205,7 +205,7 @@
     <!-- 許瑀芹 -->
     <!-- 換頁按鈕 -->
     <div class="productPageChange">
-        <div class="pageBox">
+        <div class="pageBox size marginAuto">
             <div class="itemBox">
                 <button><<</button>
                 <button>1</button>
