--- a/html/login.html
+++ b/html/login.html
@@ -30,7 +30,7 @@
                 </form>  
             </article>
             <!-- 切換按鈕區 -->
-            <article class="epFBgColor">
+            <article class="">
                 <article>
                     <img src="assets\image\all_logo.png" alt="">
                     <label for="changeBtn" class="roundOutline ">註冊</label>
