藝廊入口修改

--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -19,19 +19,29 @@
             <div class="size">
                 <div class="ring">
                     <div class="door">
-                        <a href="./gellery.html"><img src="https://picsum.photos/id/1/600/2000" alt=""></a>
+                        <a href="./gellery.html">
+                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                        </a>
                     </div>
                     <div class="door">
-                        <a href="./gellery.html"><img src="https://picsum.photos/id/50/600/2000" alt=""></a>
+                        <a href="./gellery.html">
+                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                        </a>
                     </div>
                     <div class="door">
-                        <a href="./gellery.html"><img src="https://picsum.photos/id/80/600/2000" alt=""></a>
+                        <a href="./gellery.html">
+                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                        </a>
                     </div>
                     <div class="door">
-                        <a href="./gellery.html"><img src="https://picsum.photos/id/325/600/2000" alt=""></a>
+                        <a href="./gellery.html">
+                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                        </a>
                     </div>
                     <div class="door">
-                        <a href="./gellery.html"><img src="https://picsum.photos/id/72/600/2000" alt=""></a>
+                        <a href="./gellery.html">
+                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
