--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -7,6 +7,7 @@
     <title>galleryDoor</title>
     <!-- galleryDoor.css -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/galleryDoor.css">
 </head>
 <body>
     <div class="galleryDoorWrap">
