--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -18,29 +18,49 @@
         <div class="stage">
             <div class="size">
                 <div class="ring">
-                    <div class="door">
+                    <!-- 公仔類 -->
+                    <div class="door" id="toys">
                         <a href="./gellery.html">
-                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                            <img src="../assets/image/galleryDoor_door04.gif" alt="gelleryDoorImage">
+                            <div class="text">
+                                <p>公仔類</p>
+                            </div>
                         </a>
                     </div>
+                    <!-- 品牌合作 -->
                     <div class="door">
                         <a href="./gellery.html">
-                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                            <img src="../assets/image/galleryDoor_door05.gif" alt="gelleryDoorImage">
+                            <div class="text">
+                                <p>品牌合作</p>
+                            </div>
                         </a>
                     </div>
+                    <!-- 展示區 -->
                     <div class="door">
                         <a href="./gellery.html">
-                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                            <img src="../assets/image/galleryDoor_door01.gif" alt="gelleryDoorImage">
+                            <div class="text">
+                                <p>展示區</p>
+                            </div>
                         </a>
                     </div>
+                    <!-- 雕塑類 -->
                     <div class="door">
                         <a href="./gellery.html">
-                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                            <img src="../assets/image/galleryDoor_door02.gif" alt="gelleryDoorImage">
+                            <div class="text">
+                                <p>雕塑類</p>
+                            </div>
                         </a>
                     </div>
+                    <!-- 畫作類 -->
                     <div class="door">
-                        <a href="./gellery.html">
-                            <img src="../assets/image/3dSurroundView.jpg" alt="">
+                        <a href="https://www.facebook.com/">
+                            <img src="../assets/image/galleryDoor_door03.gif" alt="gelleryDoorImage">
+                            <div class="text">
+                                <p>畫作類</p>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -49,12 +69,12 @@
     </main>
 
     <!-- Jquery.js -->
-    <script src="../js/jquery/jquery.js"></script>
+    <script src="js/jquery/jquery.js"></script>
     <!-- gsap.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
     <!-- galleryDoor.js -->
-    <script src="../js/galleryDoor.js"></script>
+    <script src="js/galleryDoor.js"></script>
     </div>
 </body>
 </html>
