--- a/html/homePage.html
+++ b/html/homePage.html
@@ -15,7 +15,7 @@
                 <section class="pic">
                     <img src="assets/image/home_homeIntro_suitcase.png" alt="">
                 </section>
-                <h1 class="deepColor">不是缺少美，<br>是缺少發現。</h1>  
+                <h1 class="deepColor">不是缺少美，是缺少發現。</h1>  
             </div>
             <div class="scrollMouse">
                 <section class="pic">
@@ -26,46 +26,51 @@
         </section>
         <section class="homeCatalog">
             <div class="catalog">
-            <div class="card sculpture">
-                <div class="pic">
-                        <img src="assets/image/home_homeCatalog_man.png"  alt="">
+                <div class="card start">
+                    <div class="txt">
+                        <h1 class="deepColor">在藝起，發現<mark class="epBColor">美</mark></h1>
+                    </div>
                 </div>
-                <div class="txt">
-                        <h2 class="deepColor">雕塑類</h2>
-                        <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
-                        <button class="round">競標</button>
+                <div class="card sculpture">
+                    <div class="pic">
+                            <img src="assets/image/home_homeCatalog_man.png"  alt="">
+                    </div>
+                    <div class="txt">
+                            <h2 class="deepColor">雕塑類</h2>
+                            <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
+                            <button class="round">競標</button>
+                    </div>
                 </div>
-            </div>
-            <div class="card paint">
-                    <div class="pic">
-                        <img src="assets/image/home_homeCatalog_smilePaint.png"  alt="">
-                    </div>
-                    <div class="txt">
-                        <h2 class="deepColor">畫作類</h2>
-                        <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
-                        <button class="round">競標</button>
-                    </div>
-            </div>
-            <div class="card toy">
-                    <div class="pic">
-                        <img src="assets/image/home_homeCatalog_elmoSculpt.png"  alt="">
-                    </div>
-                    <div class="txt">
-                        <h2 class="deepColor">公仔類</h2>
-                        <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
-                        <button class="round">競標</button>
-                    </div>
-            </div>
-            <div class="card brame">
-                    <div class="pic">
-                        <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
-                    </div>
-                    <div class="txt">
-                        <h2 class="deepColor">品牌合作</h2>
-                        <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
-                        <button class="round">競標</button>
-                    </div>
-            </div>
+                <div class="card paint">
+                        <div class="pic">
+                            <img src="assets/image/home_homeCatalog_smilePaint.png"  alt="">
+                        </div>
+                        <div class="txt">
+                            <h2 class="deepColor">畫作類</h2>
+                            <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
+                            <button class="round">競標</button>
+                        </div>
+                </div>
+                <div class="card toy">
+                        <div class="pic">
+                            <img src="assets/image/home_homeCatalog_elmoSculpt.png"  alt="">
+                        </div>
+                        <div class="txt">
+                            <h2 class="deepColor">公仔類</h2>
+                            <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
+                            <button class="round">競標</button>
+                        </div>
+                </div>
+                <div class="card brame">
+                        <div class="pic">
+                            <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
+                        </div>
+                        <div class="txt">
+                            <h2 class="deepColor">品牌合作</h2>
+                            <p class="lightColor">顯然夥伴蘋果求助幾個，奇蹟石油提供一般中間大哥直接，我市媒體這麼多聲明天堂搜尋引擎還不好好桃園尋引擎還不好好桃園內</p>
+                            <button class="round">競標</button>
+                        </div>
+                </div>
             </div>
         </section>
         <section class="homeGallery">
@@ -75,13 +80,23 @@
             <div class="pic">
                 <img src="assets/image/home_homGallery_gallery.jpeg" alt="">
             </div>
+            <div class="txt">
+                <h2 class="deepColor">藝起逛逛</h2>
+                <p class="lightColor">多樣化的展品，<br>豐富的展演方式。<br>在這裡，<br>美不只有一種形式。</p>
+                <button class="round">藝廊</button>
+            </div>
         </section>
-    <section class="homeMember">
+        <section class="homeMember">
             <div class="scrollPic">
                 <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
             </div>
             <div class="pic">
                 <img src="assets/image/home_homeMember_room.png" alt="">
+            </div>
+            <div class="txt">
+                <h2 class="deepColor">會員中心</h2>
+                <p class="lightColor">將美通通包含其中，將所有體驗美的過程記錄下來。</p>
+                <button class="round">會員中心</button>
             </div>
         </section>
         <section class="homeNews">
