header class 增加   會員中心header 修改scss

--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -28,9 +28,11 @@
 
     <title>會員中心</title>
 </head>
-
 <body>
-    @@include('layout/header.html')
+        @@include('layout/header.html',{
+            "headerClass":"SurroundViewHeader"
+        })
+    
     <!--3D背景-->
     <div id="panorama">
         <!-- <button type="button" class="navButtonClick_button">導覽列</button> -->
