--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -10,7 +10,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-    @@include('layout/header.html')
+    <!-- @@include('layout/header.html') -->
+    @@include('layout/header.html',{"headerClass":""})
     <section class="articleContent">
         <h2 class="deepColor">藝論</h2>
         <input type="radio" name="whoPost" class="listchoose" id="officePost" checked>
