--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -13,7 +13,8 @@
     <!-- 主標32px letter-spacing:-0.512px line-height:40px
     副標22px letter-spacing:normal line-height:28px
     內文20px letter-spacing:-0.06px line-height:32px -->
-    @@include('layout/header.html')
+    <!-- @@include('layout/header.html') -->
+    @@include('layout/header.html',{"headerClass":""})
     <section class="articlePageContent">
         <section class="articlePageWrap">
             <div class="pageContent">
