--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -12,7 +12,8 @@
 <body>
     <div class="galleryDoorWrap">
         <!-- 關於我們_頁首區域 -->
-    @@include('layout/header.html')
+    <!-- @@include('layout/header.html') -->
+    @@include('layout/header.html',{"headerClass":""})
 
     <!-- 伶_藝廊大門_main區域 -->
     <main class="galleryDoorMain">
