--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -13,7 +13,8 @@
 <body>
     <!-- 許瑀芹 -->
     <!-- 商品頁分類導覽 -->
-    @@include('layout/header.html')
+    <!-- @@include('layout/header.html') -->
+    @@include('layout/header.html',{"headerClass":""})
     <section class="productHead">
         <div class="productBread size marginAuto">
             <p>
