--- a/html/about.html
+++ b/html/about.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <!-- 關於我們_頁首區域 -->
-    @@include('layout/header.html')
-    
+    <!-- @@include('layout/header.html') -->
+    @@include('layout/header.html',{"headerClass":""})
 
     <!-- 伶_關於我們_main區域 -->
     <main class="aboutMain">
