--- a/html/articlePost.html
+++ b/html/articlePost.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    @@include('layout/header.html')
+    <!-- @@include('layout/header.html') -->
+    @@include('layout/header.html',{"headerClass":""})
     <section class="articlePostWrap">
         <section class="articlePostContent marginAuto">
             <section class="articleEdit">
