--- a/html/productSingle.html
+++ b/html/productSingle.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 <!-- 商品單頁_頁首區域 -->
-@@include('layout/header.html')
+<!-- @@include('layout/header.html') -->
+@@include('layout/header.html',{"headerClass":""})
 <!-- 許瑀芹 -->
 <!-- 麵包屑 -->
     <section class="SingleProductHead">
