1.button font-family修改 2.首頁文章報紙圖

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>   
+<body> 
     @@include('layout/headerNormal.html')
     <section class="homeWrap">
         <section class="homeIntro">
@@ -81,8 +81,8 @@
                 <img src="assets/image/home_homGallery_gallery.jpeg" alt="">
             </div>
             <div class="txt">
-                <h2 class="deepColor">藝起逛逛</h2>
-                <p class="lightColor">多樣化的展品，<br>豐富的展演方式。<br>在這裡，<br>美不只有一種形式。</p>
+                <h2 class="epBColor">藝起逛逛</h2>
+                <p class="deepColor">多樣化的展品，<br>豐富的展演方式。<br>在這裡，<br>美不只有一種形式。</p>
                 <button class="round">藝廊</button>
             </div>
         </section>
@@ -94,8 +94,8 @@
                 <img src="assets/image/home_homeMember_room.png" alt="">
             </div>
             <div class="txt">
-                <h2 class="deepColor">會員中心</h2>
-                <p class="lightColor">將美通通包含其中，將所有體驗美的過程記錄下來。</p>
+                <h2 class="epBColor">會員中心</h2>
+                <p class="deepColor">將美通通包含其中，將所有體驗美的過程記錄下來。</p>
                 <button class="round">會員中心</button>
             </div>
         </section>
@@ -117,9 +117,12 @@
                     </div>
                 </article>
             </div>
-            <section class="zigzag">
+            <!-- <section class="zigzag">
                 <img src="assets/image/home_homeNews_zigzag.png" alt="">
-            </section>
+            </section> -->
+
+            
+            <!-- 裝飾圖片 -->
             <section class="decorate Pictopleft">
                 <img src="assets/image/home_homeCatalog_elmoSculpt.png" alt="">
             </section>
